ScoreboardManager+ObjectiveManager+QuestManager: Rework and greatly improve ScoreboardManager